# pipeline-doctor

./: .env.example  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
adk_app/: agent.py  helpers.py  prompts.py
adk_app/llm/: base.py  ollama.py
adk_app/rag/: __init__.py  retriever.py
adk_app/tools/: suggest_fixes.py  summarize_metrics.py
data/samples/: spark_eventlog.jsonl  spark_eventlog_shuffle.jsonl
docs/knowledge/: delta_compaction.md  risk_flags.md  shuffle_tuning.md  spark.age.md
tests/: test_suggest_fixes.py  test_summarize_metrics.py
ui/: agent_cli.py
