[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-doctor"
version = "0.0.1"
description = "AI-assisted tooling for pipeline diagnostics"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "mypy>=1.8",
  "ruff>=0.5.0",
  "requests>=2.31"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adk_app*"]

# ---- Config tool (niente file separati) ----
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
# selezione base (pyflakes + pycodestyle)
select = ["E", "F"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true